--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,11 +19,11 @@ jobs:
     runs-on: self-hosted
     defaults:
       run:
-        working-directory: /srv/www/
+        working-directory: /var/www/
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: Run a multi-line script
         run: |
-          cd /srv/www/epts
+          cd /var/www/statics/epts
           git pull
           
