--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,5 +25,6 @@ jobs:
       - name: Run a multi-line script
         run: |
           cd /var/www/statics/epts
+          git config --global --add safe.directory /var/www/statics/epts
           git pull
           
